--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
 
         const stat  = computeStatus(r);
         const setor = getFirst(r, ["diretoria_responsavel","Diretoria Responsável","setor_lotacao","Setor","setor"]);
-        const gerencia = getFirst(r, ["gerencia_resposavel","gerencia_responsavel","Gerência","gerencia"]);
+        const gerencia = getFirst(r, ["gerencia_responsavel","Gerência","gerencia"]);
 
         const possuiAditivoRaw = getFirst(r, ["possui_aditivo","aditivo","Aditivo"]);
         const qtdAditivosRaw   = getFirst(r, ["quantos_aditivos","Qtd Aditivos","qtd_aditivos"]);
@@ -750,7 +750,7 @@
           <td>${escapeHTML(ident || "—")}</td>
           <td>${escapeHTML(tipo || "—")}</td>
           <td>${escapeHTML(inst || "—")}</td>
-          <td>${escapeHTML(setor || "—")}</td>
+          <td>${escapeHTML(diretoria || "—")}</td>
           <td>${escapeHTML(gerencia || "—")}</td>
           <td>${escapeHTML(stat || "—")}</td>
           <td>${escapeHTML(inicio || "—")}</td>
