--- a/index.html
+++ b/index.html
@@ -375,15 +375,17 @@
         </div>
       </div>
 
-      <div class="panel" style="margin-top:14px;">
-        <h3>Mapa (parcerias por UF)</h3>
-        <div id="chart_map"></div>
-      </div>
+      <div class="row row-map-dir" style="margin-top:14px;">
+  <div class="panel">
+    <h3>Mapa (parcerias por UF)</h3>
+    <div id="chart_map"></div>
+  </div>
 
-      <div class="panel" style="margin-top:14px;">
-        <h3>Diretorias responsáveis (quantitativo)</h3>
-        <div id="chart_dir"></div>
-      </div>
+  <div class="panel">
+    <h3>Diretorias responsáveis (quantitativo)</h3>
+    <div id="chart_dir"></div>
+  </div>
+</div>
 
       <div class="panel" style="margin-top:14px;">
         <h3>Instrumentos</h3>
